--- a/Advanced-Portfolio/css/master.css
+++ b/Advanced-Portfolio/css/master.css
@@ -1,4 +1,5 @@
 body{
+    color: #4e5e5b;
     margin:0;
     position: relative;
 }
@@ -10,33 +11,35 @@ body{
     background-color: rgb(205, 240, 234);
     text-align: center;
 }
-.middlecontainer{
-    margin:0;
-    width: 100%;
-    height: 1000px;
-    background-color: rgb(255, 224, 255);
+.middle-container{
+    background-color: rgb(210, 233, 225);
+    padding-top: 100px;
 }
 
 
-.bottomcontainer{
-    margin:0;
-    width: 100%;
-    height: 1000px;
-    background-color:rgb(255, 235, 255);
+.bottom-container{
+
 }
 .h1
 {
-    font-size: 50pt;
+    color: #66BFBF;
+    font-weight: bold;
+    font-size: 600%;
     margin: 0 auto 0 auto;
     padding-top: 150px;
     text-align: center;
-    width: 30%;
-    font-family: 'Indie Flower', cursive;
+    /* width: 30%; */
+    font-family: 'Gloria Hallelujah', cursive;
+}
+h3{
+    color: rgb(92, 143, 160);
+    margin-top: 0;
+    font-size: 3rem;
 }
 .saviour{
     margin:0 auto 0 auto;
     text-align: center;
-    font-size: 20pt;
+    font-size: 2.5rem;
     font-family: 'Big Shoulders Stencil Display', cursive;
 }
 
@@ -50,7 +53,7 @@ body{
 }
 .lower-cloud{
     position: absolute;
-    top: 300px;
+    top: 400px; 
     left: 110px;
 }
 
@@ -59,4 +62,74 @@ body{
     position: relative;
     padding-top: 150px;
     /* top: 200px; */
+}
+
+.profile{
+    text-align: center;
+    font-size: 2.5rem;
+}
+
+.intro{
+    width: 40%;
+    margin: 0 auto;
+    margin-bottom: 100px;
+    margin-top: 0%;
+}
+.skills{
+    text-align: center;
+    font-size: 3rem;
+    margin-bottom: 0;
+}
+.my-skills{
+    margin: 100px 100px 100px 200px;
+}
+.skill-row{
+    font-size: 1.5rem;
+    width: 70%;
+    margin: 0 auto 100px auto;
+    line-height: 2;
+    text-align: left;
+    /* padding: 100px; */
+}
+
+.coding{
+    width: 30%;
+    float: left;
+    margin-right: 100px;
+}
+
+.webd{
+    width: 30%;
+    float: right;
+}
+
+.editing{
+    width: 30%;
+    float: left;
+    margin-right: 100px;
+}
+
+.description{
+    font-size: 1.5em;
+    margin-top: 0;
+}
+
+h2{
+    color: mediumaquamarine;
+    font-size: 5rem;
+    margin:0;
+}
+
+.top-line{
+    width: 100%;
+    height: 70px;
+    background-color: rgb(171, 214, 201);
+    position: fixed;
+}
+
+.menu{
+    height: 60px;
+    margin-top: 5px;
+    position: absolute;
+    right: 10px;
 }
