--- a/Advanced-Portfolio/css/master.css
+++ b/Advanced-Portfolio/css/master.css
@@ -1,6 +1,6 @@
 body{
     color: #4e5e5b;
-    margin:0;
+    margin: 0;
     position: relative;
 }
 
@@ -14,11 +14,15 @@ body{
 .middle-container{
     background-color: rgb(210, 233, 225);
     padding-top: 100px;
+    margin: 0;
+    padding-bottom: 50px;
 }
 
 
 .bottom-container{
-
+    background-color: #60bfbf;
+    width: 100%;
+    padding: 1px;
 }
 .h1
 {
@@ -34,6 +38,7 @@ body{
 h3{
     color: rgb(92, 143, 160);
     margin-top: 0;
+    margin-bottom: 0;
     font-size: 3rem;
 }
 .saviour{
@@ -69,8 +74,13 @@ h3{
     font-size: 2.5rem;
 }
 
+.profile-pic{
+    width: 10%;
+}
+
+
 .intro{
-    width: 40%;
+    width: 70%;
     margin: 0 auto;
     margin-bottom: 100px;
     margin-top: 0%;
@@ -81,12 +91,28 @@ h3{
     margin-bottom: 0;
 }
 .my-skills{
-    margin: 100px 100px 100px 200px;
+    margin: 100px auto 100px auto;
 }
-.skill-row{
+.skill-row-1{
     font-size: 1.5rem;
     width: 70%;
-    margin: 0 auto 100px auto;
+    margin: 100px auto 100px auto;
+    line-height: 2;
+    text-align: left;
+    /* padding: 100px; */
+}
+.skill-row-2{
+    font-size: 1.5rem;
+    width: 70%;
+    margin: 200px auto 200px auto;
+    line-height: 2;
+    text-align: left;
+    /* padding: 100px; */
+}
+.skill-row-3{
+    font-size: 1.5rem;
+    width: 70%;
+    margin: 100px auto 200px auto;
     line-height: 2;
     text-align: left;
     /* padding: 100px; */
@@ -110,8 +136,8 @@ h3{
 }
 
 .description{
-    font-size: 1.5em;
-    margin-top: 0;
+    font-size: 1em;
+    margin: 0;
 }
 
 h2{
@@ -133,3 +159,65 @@ h2{
     position: absolute;
     right: 10px;
 }
+
+p{
+    line-height: 2;
+}
+
+hr{
+    border: rgb(220, 243, 243) solid;
+    width: 50%;
+    height: 2px;
+    border-radius: 10%;
+    border-radius: 100%;
+}
+
+.get-in-touch{
+    font-size: 2em;
+    margin: 50px 0 0 0;
+}
+
+.contact-me{
+    font-size: 2em;
+    width: 100%;
+    text-align: center;
+    margin: 0;
+}
+.btn {
+    background: #34b8d9;
+    background-image: -webkit-linear-gradient(top, #34b8d9, #27d9f0);
+    background-image: -moz-linear-gradient(top, #34b8d9, #27d9f0);
+    background-image: -ms-linear-gradient(top, #34b8d9, #27d9f0);
+    background-image: -o-linear-gradient(top, #34b8d9, #27d9f0);
+    background-image: linear-gradient(to bottom, #34b8d9, #27d9f0);
+    -webkit-border-radius: 5;
+    -moz-border-radius: 5;
+    border-radius: 5px;
+    color: #ffffff;
+    font-size: 30px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #73c9ff;
+    background-image: -webkit-linear-gradient(top, #73c9ff, #68c9e6);
+    background-image: -moz-linear-gradient(top, #73c9ff, #68c9e6);
+    background-image: -ms-linear-gradient(top, #73c9ff, #68c9e6);
+    background-image: -o-linear-gradient(top, #73c9ff, #68c9e6);
+    background-image: linear-gradient(to bottom, #73c9ff, #68c9e6);
+    text-decoration: none;
+  }
+
+  .bottom-icon{
+      padding: 0 10px 0 10px;
+  }
+
+  .copyright{
+      margin: 0 auto 0 auto;
+      text-align: center;
+  }
+
+  .margin-0{
+      margin: 0;
+  }
