--- a/tindog/css/styles.css
+++ b/tindog/css/styles.css
@@ -38,7 +38,7 @@
 
     .title-img{
         width: 60% !important;
-        transform: rotate(0);
+        transform: rotate(0) !important;
         justify-content: center;
         position: static !important;
 
@@ -175,4 +175,14 @@ h3{
     /* margin-left: auto; */
     margin-right: 0;
     line-height: 1.5 !important;
+}
+
+/* cta */
+
+#cta{
+    text-align: center;
+}
+
+#footer{
+    text-align: center;
 }
