--- a/Web-Projects/Calculator/style.css
+++ b/Web-Projects/Calculator/style.css
@@ -1,12 +1,40 @@
 body{
     text-align: center;
+    background-image: url(images/background.png);
+    background-repeat: repeat-x repeat-y;
+    font-family: 'Otomanopee One', sans-serif !important;
+}
+
+
+.container{
+    width: 100wh;
+    margin: 0 auto !important;
+    padding-top: 5%;
+}
+
+.btn{
+    border: black 2px solid !important;
+}
+
+
+.footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    margin: auto;
 }
 
 @media (min-width:1200px){
+
+    h1{
+        margin-top: 5%!important;
+        font-size: 5rem !important;
+    }
     .row{
     text-align: center;
     width: 40%;
     margin: auto !important;
+    background-color: rgb(175, 255, 218);
     }
 
     .col-sm-3{
@@ -22,15 +50,17 @@ body{
         text-align: right;
     }
 }
-.container{
-    width: 100wh;
-    margin: 10% auto !important;
-}
 
 @media (max-width:1200px) {
+
+    h1{
+        margin-top: 5%!important;
+        font-size: 3rem!important;
+    }
     .row{
         width: 100wh !important;
-        margin: auto !important;
+        margin: auto 30px !important;
+        background-color: rgb(175, 255, 218);
     }
     
     .col-sm-3{
