--- a/Web-Projects/Calculator/style.css
+++ b/Web-Projects/Calculator/style.css
@@ -37,7 +37,7 @@ body{
     position: absolute;
     bottom: 0;
     width: 100%;
-    margin: auto;
+    margin: 20px auto 0;
 }
 
 @media (min-width:1200px){
