--- a/Web-Projects/Calculator/style.css
+++ b/Web-Projects/Calculator/style.css
@@ -34,10 +34,10 @@ body{
 }
 
 .footer{
-    position: absolute;
-    bottom: 0;
+    /* position: absolute;
+    bottom: 0; */
     width: 100%;
-    margin: 20px auto 0;
+    margin: 50px auto 0 !important;
 }
 
 @media (min-width:1200px){
