commit to master

--- a/Web-Projects/Calculator/style.css
+++ b/Web-Projects/Calculator/style.css
@@ -20,11 +20,11 @@ body{
 }
 
 
-.element-plus,.element-minus,.element-multiply,.element-divide,.element-equal{
+.element-12,.element-13,.element-14,.element-15,.element-16{
     background-color: rgb(242, 163, 60) !important;
 }
 
-.element-clear,.element-open,.element-close{
+.element-17,.element-18,.element-19{
     background-color: rgb(76, 75, 76) !important;
 }
 
