--- a/Web-Projects/Advanced-Portfolio/css/master.css
+++ b/Web-Projects/Advanced-Portfolio/css/master.css
@@ -2,11 +2,14 @@ body{
     color: #4e5e5b;
     margin: 0;
     position: relative;
+    /* max-width: 100wh; */
+    min-width: 100wh;
 }
 
 .topcontainer {
     margin:0;
     width: 100%;
+
     /* height:995px; */
     background-color: rgb(205, 240, 234);
     text-align: center;
@@ -28,11 +31,10 @@ body{
 {
     color: #66BFBF;
     font-weight: bold;
-    font-size: 600%;
+    font-size: 4rem;
     margin: 0 auto 0 auto;
-    padding-top: 150px;
+    padding-top: 10vh;
     text-align: center;
-    /* width: 30%; */
     font-family: 'Gloria Hallelujah', cursive;
 }
 h3{
@@ -60,6 +62,7 @@ h3{
     position: absolute;
     top: 400px; 
     left: 110px;
+    width: 20%;
 }
 
 .mountain{
@@ -77,13 +80,18 @@ h3{
 .profile-pic{
     width: 10%;
 }
-
+h2{
+    color: mediumaquamarine;
+    font-size: 3rem;
+    margin:0;
+}
 
 .intro{
     width: 70%;
     margin: 0 auto;
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
     margin-top: 0%;
+    font-size: 2.5rem;
 }
 .skills{
     text-align: center;
@@ -92,6 +100,11 @@ h3{
 }
 .my-skills{
     margin: 100px auto 100px auto;
+}
+.skill-row-1,.skill-row-2,.skill-row-3{
+    display: flex;
+    flex-direction: row;
+    /* flex-wrap: wrap; */
 }
 .skill-row-1{
     font-size: 1.5rem;
@@ -127,6 +140,7 @@ h3{
 .webd{
     width: 30%;
     float: right;
+    order: 2;
 }
 
 .editing{
@@ -140,11 +154,6 @@ h3{
     margin: 0;
 }
 
-h2{
-    color: mediumaquamarine;
-    font-size: 5rem;
-    margin:0;
-}
 
 .top-line{
     width: 100%;
@@ -183,41 +192,96 @@ hr{
     text-align: center;
     margin: 0;
 }
-.btn {
-    background: #34b8d9;
-    background-image: -webkit-linear-gradient(top, #34b8d9, #27d9f0);
-    background-image: -moz-linear-gradient(top, #34b8d9, #27d9f0);
-    background-image: -ms-linear-gradient(top, #34b8d9, #27d9f0);
-    background-image: -o-linear-gradient(top, #34b8d9, #27d9f0);
-    background-image: linear-gradient(to bottom, #34b8d9, #27d9f0);
-    -webkit-border-radius: 5;
-    -moz-border-radius: 5;
+.btn { 
+    padding: 10px;
+    color: white;
+    background-color: #1d72b8ee;
     border-radius: 5px;
-    color: #ffffff;
-    font-size: 30px;
-    padding: 10px 20px 10px 20px;
-    text-decoration: none;
-  }
+    transition: all 0.5s;
+}
   
-  .btn:hover {
-    background: #73c9ff;
-    background-image: -webkit-linear-gradient(top, #73c9ff, #68c9e6);
-    background-image: -moz-linear-gradient(top, #73c9ff, #68c9e6);
-    background-image: -ms-linear-gradient(top, #73c9ff, #68c9e6);
-    background-image: -o-linear-gradient(top, #73c9ff, #68c9e6);
-    background-image: linear-gradient(to bottom, #73c9ff, #68c9e6);
-    text-decoration: none;
-  }
+.btn:hover {
+  background-color: #1d71b8;
+  transition: all 0.5s;
+}
 
-  .bottom-icon{
-      padding: 0 10px 0 10px;
-  }
+.bottom-icon{
+    padding: 0 10px 0 10px;
+}
 
-  .copyright{
-      margin: 0 auto 0 auto;
-      text-align: center;
-  }
+.copyright{
+    margin: 0 auto 0 auto;
+    text-align: center;
+}
 
-  .margin-0{
-      margin: 0;
+.margin-0{
+    margin: 0;
+}
+
+
+  @media (max-width:1400px) {
+      .mountain{
+          padding-top: 0%;
+      }
+
+      .lower-cloud{
+        position: absolute;
+        top: 30vh; 
+        left: 10px;
+        width: 20%;
+    }
+    .middle-container{
+        padding-top: 40px;
+    }
+      .profile-pic{
+          width: 40%;
+      }
+      .intro{
+          font-size: 1.5rem;
+          width: 90%;
+      }
+      .my-skills{
+          margin:50px 0 0;
+          font-size: 2.5rem;
+      }
+      .skill-row-1,.skill-row-2,.skill-row-3{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        margin: 40px auto;
+        text-align: center;
+        line-height: 1;
+    }
+    .skill-row-1 p,.skill-row-2 p,.skill-row-3 p{
+        width: 100%;
+    }
+    .webd{
+        order: 0;
+        width: 50%;
+        margin: 0 auto 20px;
+    }
+    .coding{
+        width: 50%;
+        margin: 0 auto 20px;
+    }
+    .editing{
+        width: 50%;
+        margin: 0 auto 20px;
+    }
+    .bottom-icon img{
+        padding: 0 10px 0 10px;
+        width: 50%;
+    }
+    .get-in-touch{
+        font-size: 2rem;
+    }
+    .margin-0{
+        font-size: 1.5rem;
+        margin-bottom: 10px;
+    }
+    .btn{
+        font-size: 2rem;
+        width: 30%;
+    }
   }
